# athena

branches/no-bayesian/: CHANGELOG  Makefile.am
branches/no-bayesian/doc/: ATHENA_Tutorial_Release.doc  athena_manual.doc
branches/no-bayesian/sample_sets/: Sample_Dataset-10.txt  Sample_Dataset-100.txt  Sample_Dataset-12.txt  Sample_Dataset-17.txt  Sample_Dataset-2.txt  Sample_Dataset-21.txt  Sample_Dataset-23.txt  Sample_Dataset-26.txt  Sample_Dataset-39.txt  Sample_Dataset-46.txt  Sample_Dataset-47.txt  Sample_Dataset-48.txt  Sample_Dataset-5.txt  Sample_Dataset-52.txt  Sample_Dataset-53.txt  Sample_Dataset-60.txt  Sample_Dataset-62.txt  Sample_Dataset-66.txt  Sample_Dataset-70.txt  Sample_Dataset-78.txt  Sample_Dataset-79.txt  Sample_Dataset-8.txt  Sample_Dataset-87.txt  Sample_Dataset-88.txt  Sample_Dataset-89.txt  Sample_Dataset-9.txt  Sample_Dataset-90.txt  Sample_Dataset-93.txt  Sample_Dataset-99.txt
branches/no-bayesian/samples/: contin_map.txt
branches/no-bayesian/scripts/: athena_power.pl
branches/no-bayesian/src/annie/: Control.h  Exception.cpp  Exception.h  InputLayer.h  InputNeuron.cpp  Layer.cpp  Layer.h  Makefile.am  MultiLayerNetwork.h  Network.h  Neuron.h  listeners.h
branches/no-bayesian/src/athena/: AUCCalculator.cpp  AUCCalculator.h  Algorithm.cpp  Algorithm.h  AlgorithmFactory.cpp  AlgorithmFactory.h  AthenaGrammarSI.cpp  BackProp.h  BackPropAnnie.cpp  BackPropAnnieTree.cpp  BayesModelLog.cpp  BioFilterReader.cpp  CalculatorFactory.cpp  Config.cpp  Config.h  ConfigFileReader.cpp  CycleBreaker.h  DAGraph.cpp  DAGraph.h  ExpressionTree.cpp  GABayes.cpp  GABayesSolution.h  GABayesSolutionCreator.cpp  GADiscrimBayes.cpp  GAFunct.cpp  GAFunct.h  GAParetoSelector.cpp  GE1DArrayGenome.cpp  GEBayes.h  GENNAlg.cpp  GENNAlg.h  GENNGrammarAdjuster.cpp  GEObjective.cpp  GEObjective.h  GESymbReg.cpp  GESymbReg.h  InitGEgenome.cpp  K2BICCalculator.cpp  MDR.cpp  Makefile.am  (+25 more)
branches/no-bayesian/src/data_manage/: CVSet.h  ContinFileReader.cpp  CrossValidator.cpp  CustomDummyConvert.cpp  Dataholder.cpp  Dataholder.h  Dataset.cpp  Dataset.h  FileHandler.h  MDRFileHandler.cpp  MDRFileHandler.h  NormalizeContinuous.h  OttDummyConvert.cpp  RandomNoReplace.h  ScaleCategorical.cpp  ScaleContinuous.h  ScaleGroupContinuous.cpp  StephenDummyConvert.h
branches/no-bayesian/src/galib247/: makevars.64
trunk/: .gitignore  Makefile.am  README  SampleAthena.pbs  add.gram  all_operators.gram  bloat_control.diff  config.h.in~  configure.ac  gesr_boolean.gram  makeathenaconfig.pl  run_athena.pl  run_athenap.pl  symbolic_regress.gram
trunk/doc/: ATHENA_Tutorial_Release.doc  athena-projteam-20110927.docx  athena_manual.doc  athena_manual.docx
trunk/make/m4/: rl_configure.m4
trunk/sample_sets/: Sample_Dataset-1.txt.athena.sum  Sample_Dataset-1.txt.cv1.1.best  Sample_Dataset-1.txt.cv1.1.dot  Sample_Dataset-1.txt.cv2.1.best  Sample_Dataset-1.txt.cv2.1.dot  Sample_Dataset-1.txt.cv3.1.best  Sample_Dataset-1.txt.cv3.1.dot  Sample_Dataset-1.txt.cv4.1.best  Sample_Dataset-1.txt.cv4.1.dot  Sample_Dataset-1.txt.cv5.1.best  Sample_Dataset-1.txt.cv5.1.dot  Sample_Dataset-11.txt  Sample_Dataset-14.txt  Sample_Dataset-18.txt  Sample_Dataset-2.txt.athena.sum  Sample_Dataset-2.txt.cv1.1.best  Sample_Dataset-2.txt.cv1.1.dot  Sample_Dataset-2.txt.cv2.1.best  Sample_Dataset-2.txt.cv2.1.dot  Sample_Dataset-2.txt.cv3.1.best  Sample_Dataset-2.txt.cv3.1.dot  Sample_Dataset-2.txt.cv4.1.best  Sample_Dataset-2.txt.cv4.1.dot  Sample_Dataset-2.txt.cv5.1.best  Sample_Dataset-2.txt.cv5.1.dot  Sample_Dataset-20.txt  Sample_Dataset-24.txt  Sample_Dataset-28.txt  Sample_Dataset-29.txt  Sample_Dataset-3.txt  Sample_Dataset-32.txt  Sample_Dataset-34.txt  Sample_Dataset-36.txt  Sample_Dataset-40.txt  Sample_Dataset-42.txt  Sample_Dataset-45.txt  Sample_Dataset-49.txt  Sample_Dataset-51.txt  Sample_Dataset-7.txt  Sample_Dataset-74.txt  (+4 more)
trunk/src/: makefile
trunk/src/annie/: CenterNeuron.h  Control.h  Link.cpp  MultiLayerNetwork.cpp  Neuron.cpp  Neuron.h  SimpleNeuron.cpp  SimpleNeuron.h  TrainingSet.cpp  TrainingSet.h  TwoLayerNetwork.cpp  Vector.cpp  annie.h  args.cpp  args.h  config.h  defines.h  examples.h  random.h
trunk/src/athena/: AUCCalculator.cpp  AUCCalculator.h  Algorithm.cpp  Algorithm.h  AlgorithmFactory.cpp  AlgorithmFactory.h  AlgorithmList.h  AlgorithmLog.h  Athena2DArrayGenome.cpp  Athena2DArrayGenome.h  AthenaExcept.h  AthenaGrammarSI.cpp  AthenaGrammarSI.h  BackProp.cpp  BackProp.h  BackPropAnnie.cpp  BackPropAnnie.h  BackPropAnnieTree.cpp  BackPropAnnieTree.h  BackPropSMD.cpp  BackPropSMD.h  BackPropTree.cpp  BackPropTree.h  BackPropTreeSMD.cpp  BackPropTreeSMD.h  BalAccCalculator.cpp  BalAccCalculator.h  BayesModelLog.h  BayesSolution.cpp  BayesSolution.h  BayesSolutionCreator.cpp  BayesSolutionCreator.h  BestModelSelector.cpp  BioFilterBinReader.cpp  BioFilterBinReader.h  BioFilterModelCollection.cpp  BioFilterModelCollection.h  BioFilterReader.cpp  BioFilterReader.h  BioReader.h  (+120 more)
trunk/src/data_manage/: CVInterval.cpp  CVInterval.h  CVSet.cpp  CVSet.h  ContinFileReader.cpp  ContinFileReader.h  ContinMapFileReader.cpp  ContinMapFileReader.h  CrossValidator.cpp  CrossValidator.h  CustomDummyConvert.h  DataExcept.cpp  DataExcept.h  Dataholder.cpp  Dataholder.h  Dataset.cpp  Dataset.h  DummyConvert.h  EncodingFactory.cpp  EncodingFactory.h  FileHandler.cpp  FileHandler.h  Individual.cpp  Individual.h  MDRFileHandler.cpp  MDRFileHandler.h  Makefile  Makefile.32  Makefile.64  MapFileReader.cpp  MapFileReader.h  NormalizeContinuous.cpp  NormalizeContinuous.h  OttDummyConvert.cpp  OttDummyConvert.h  OutputSet.cpp  OutputSet.h  RandomNoReplace.cpp  RandomNoReplace.h  ScaleCategorical.cpp  (+15 more)
trunk/src/libGE-0.26/: Makefile  Makefile.32  Makefile.64  Makefile.am  Makefile.in  Makefile.orig  config.status  configure  out
trunk/src/random/: mersenne_twister.h
trunk/src/scripts/: log_power.pl  model_test.pl  model_test_contin.pl
trunk/src/stat_calc/: AUCcalc.cpp  Descriptive.h  KnuthComboGenerator.cpp  Makefile  Makefile.32  Makefile.64  Makefile.am  Spearman.cpp  Spearman.h
(+324 files in other folders)
