noinst_LTLIBRARIES=libGE.la
AM_CPPFLAGS=-I$(top_srcdir)/src/galib247/ga -I$(top_srcdir)/src/galib247

libGE_la_SOURCES=src/Genotype.cpp \
src/Genotype.h \
src/Phenotype.cpp \
src/Phenotype.h \
src/Symbol.cpp \
src/Symbol.h \
src/Production.cpp \
src/Production.h \
src/Rule.cpp \
src/Rule.h \
src/Mapper.cpp \
src/Mapper.h \
src/Grammar.cpp \
src/Grammar.h \
src/CFGrammar.cpp \
src/CFGrammar.h \
src/GEGrammar.cpp \
src/GEGrammar.h \
src/Initialiser.cpp \
src/Initialiser.h \
src/GEGrammarSI.cpp \
src/GEGrammarSI.h \
src/Tree.h \
src/ge.h \
src/libGEdefs.h
