# This is here to prevent installation of LOKI during a distcheck
# DISTCHECK_CONFIGURE_FLAGS=--disable-loki
bin_PROGRAMS = athena

AM_CPPFLAGS=-I$(top_srcdir)/src/galib247 -I$(top_srcdir)/src/stat_calc -I$(top_srcdir)/src/data_manage -I$(top_srcdir)/src/libGE-0.26 -I$(top_srcdir)/src/annie -DATHENA_BLOAT_CONTROL

athena_SOURCES=AlgorithmFactory.cpp \
AlgorithmFactory.h \
BalAccCalculator.cpp \
BalAccCalculator.h \
CalculatorFactory.cpp \
CalculatorFactory.h \
Config.cpp \
Config.h \
ConfigFileReader.cpp \
ConfigFileReader.h \
GE1DArrayGenome.cpp \
GE1DArrayGenome.h \
GENNGrammarAdjuster.cpp \
GENNGrammarAdjuster.h \
GEObjective.cpp \
GEObjective.h \
athena.cpp \
InitGEgenome.cpp \
InitGEgenome.h \
MeanSquaredErrCalculator.cpp \
MeanSquaredErrCalculator.h \
NNSolution.cpp \
NNSolution.h \
NNSolutionCreator.cpp \
NNSolutionCreator.h \
OutputManager.cpp \
OutputManager.h \
Population.cpp \
Population.h \
Solution.cpp \
Solution.h \
SolutionFactory.cpp \
SolutionFactory.h \
Terminals.cpp \
Terminals.h \
TerminalSymbCreator.cpp \
TerminalSymbCreator.h \
TerminalSymbol.cpp \
TerminalSymbol.h \
GENNAlg.cpp \
GENNAlg.h \
NNSolutionCreatorIncludeAll.cpp \
NNSolutionCreatorIncludeAll.h \
NNSolutionCreatorIncludeOnce.cpp \
NNSolutionCreatorIncludeOnce.h \
ExpressionTree.cpp \
ExpressionTree.h \
NNLog.cpp \
NNLog.h \
Algorithm.cpp \
Algorithm.h \
BioFilterReader.cpp \
BioFilterReader.h \
AthenaGrammarSI.cpp \
AthenaGrammarSI.h \
BioFilterModelCollection.cpp \
BioFilterModelCollection.h \
BackProp.cpp \
BackProp.h \
BioFilterBinReader.cpp \
BioFilterBinReader.h \
genegenemodel.cpp \
genegenemodel.h \
BackPropAnnie.cpp \
BackPropAnnie.h \
BackPropAnnieTree.cpp \
BackPropAnnieTree.h \
SymRegressSolutionCreator.cpp \
SymRegressSolutionCreator.h \
GESymbReg.cpp \
GESymbReg.h \
NNModelLog.cpp \
NNModelLog.h \
ModelLogParser.cpp \
ModelLogParser.h \
AUCCalculator.cpp \
AUCCalculator.h \
BestModelSelector.cpp \
BestModelSelector.h \
OptGrammarFactory.cpp \
OptGrammarFactory.h \
SimpleOptGrammar.cpp \
SimpleOptGrammar.h \
ComplexOptGrammar.cpp \
ComplexOptGrammar.h \
SumFileReader.cpp \
SumFileReader.h \
MeanAbsErrCalculator.cpp \
MeanAbsErrCalculator.h \
ScoreHolder.cpp \
ScoreHolder.h \
AlgorithmList.h \
AlgorithmLog.h \
AthenaExcept.h \
BioReader.h \
CalculatorList.h \
OptGrammar.h \
SolutionCalculator.h \
SolutionCreator.h \
Structs.h \
biomodel.h \
genegenemodelreader.h \
rbtree.h \
region.h \
snpholder.h \
snpsnpmodel.h \
Tree.hh \
GenomeTransfer.cpp \
GenomeTransfer.h 

athena_LDADD=../libGE-0.26/libGE.la ../galib247/libga.la ../annie/libannie.la ../stat_calc/libstat_calc.la ../data_manage/libdata_manage.la

