noinst_LTLIBRARIES=libdata_manage.la
AM_CPPFLAGS=-I$(top_srcdir)/src/stat_calc
libdata_manage_la_SOURCES=ContinFileReader.cpp \
ContinFileReader.h \
CrossValidator.cpp \
CrossValidator.h \
CVInterval.cpp \
CVInterval.h \
CVSet.cpp \
CVSet.h \
DataExcept.cpp \
DataExcept.h \
Dataholder.cpp \
Dataholder.h \
Dataset.cpp \
Dataset.h \
FileHandler.cpp \
FileHandler.h \
Individual.cpp \
Individual.h \
MapFileReader.cpp \
MapFileReader.h \
MDRFileHandler.cpp \
MDRFileHandler.h \
NormalizeContinuous.cpp \
NormalizeContinuous.h \
OttDummyConvert.cpp \
OttDummyConvert.h \
ScaleContinuous.cpp \
ScaleContinuous.h \
ScaleData.cpp \
ScaleData.h \
Stringmanip.cpp \
Stringmanip.h \
OutputSet.cpp \
OutputSet.h \
ScaledDataFactory.cpp \
ScaledDataFactory.h \
RandomNoReplace.cpp \
RandomNoReplace.h \
StephenDummyConvert.cpp \
StephenDummyConvert.h \
ContinMapFileReader.cpp \
ContinMapFileReader.h \
ScaleGroupContinuous.cpp \
ScaleGroupContinuous.h \
CustomDummyConvert.cpp \
CustomDummyConvert.h \
EncodingFactory.cpp \
EncodingFactory.h \
ScaleCategorical.cpp \
ScaleCategorical.h \
DummyConvert.h \
Utility.h

#libdata_manage_la_LIBADD=$(top_srcdir)/src/stat_calc/libstat_calc.la
libdata_manage_la_LIBADD=../stat_calc/libstat_calc.la


