noinst_LTLIBRARIES=libga.la
AM_CPPFLAGS=-DATHENA_BLOAT_CONTROL
libga_la_SOURCES=ga/garandom.C \
ga/garandom.h \
ga/gaerror.C \
ga/gaerror.h \
ga/GAParameter.C \
ga/GAParameter.h \
ga/GAStatistics.C \
ga/GAStatistics.h \
ga/GABaseGA.C \
ga/GABaseGA.h \
ga/GASStateGA.C \
ga/GASStateGA.h \
ga/GASimpleGA.C \
ga/GASimpleGA.h \
ga/GAIncGA.C \
ga/GAIncGA.h \
ga/GADemeGA.C \
ga/GADemeGA.h \
ga/GADCrowdingGA.C \
ga/GADCrowdingGA.h \
ga/GASelector.C \
ga/GASelector.h \
ga/GAScaling.C \
ga/GAScaling.h \
ga/GAPopulation.C \
ga/GAPopulation.h \
ga/GAGenome.C \
ga/GAGenome.h \
ga/GABinStr.C \
ga/GABinStr.h \
ga/gabincvt.C \
ga/gabincvt.h \
ga/GAAllele.C \
ga/GAAllele.h \
ga/GAStringGenome.C \
ga/GAStringGenome.h \
ga/GARealGenome.C \
ga/GARealGenome.h \
ga/GA1DBinStrGenome.C \
ga/GA1DBinStrGenome.h \
ga/GA2DBinStrGenome.C \
ga/GA2DBinStrGenome.h \
ga/GA3DBinStrGenome.C \
ga/GA3DBinStrGenome.h \
ga/GABin2DecGenome.C \
ga/GABin2DecGenome.h \
ga/GA1DArrayGenome.C \
ga/GA1DArrayGenome.h \
ga/GA2DArrayGenome.C \
ga/GA2DArrayGenome.h \
ga/GA3DArrayGenome.C \
ga/GA3DArrayGenome.h \
ga/GATreeBASE.C \
ga/GATreeBASE.h \
ga/GATree.C \
ga/GATree.h \
ga/GATreeGenome.C \
ga/GATreeGenome.h \
ga/GAListBASE.C \
ga/GAListBASE.h \
ga/GAList.C \
ga/GAList.h \
ga/GAListGenome.C \
ga/GAListGenome.h \
ga/gatypes.h \
ga/gaversion.h \
ga/std_stream.h \
ga/gaid.h \
ga/ga.h \
ga/GAMask.h \
ga/GANode.h \
ga/GAArray.h \
ga/gaconfig.h \
ga/GAEvalData.h
